# rag-rapports-publics

./: .gitignore  .python-version  pyproject.toml  requirements.txt
app/: app.py
app/pages/: 01_Redaction.py
notebooks/: Fichier_test.ipynb  fichier_test2.ipynb  scraper_cdc.ipynb
scripts/: ask.py  ingest_folder.py  update_catalogue.py
src/rag_public_reports/: catalogue.py  config.py  ingest.py  prompts.py  rag.py  utils.py  vectorstore.py
src/rag_public_reports.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
