[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-public-reports"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
# ↑ Dit à Python : "le code source est dans le dossier src/"
# Il trouvera automatiquement rag_public_reports à l'intérieur
